# Kommunicate-Android-Chat-SDK

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  build.gradle  gradle.properties  local.properties  migration.md  settings.gradle
.github/workflows/: pr-check.yml  stale.yml  temp.yml
app/: build.gradle  google-services.json  lint-baseline.xml  proguard-merged-config.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: applozic-settings.json  kommunicate-settings.json
app/src/main/res/drawable/: km_loading_anim.xml
app/src/main/res/layout/: activity_main.xml  activity_splash_screen.xml
app/src/main/res/layout-v17/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml  projectDependencyGraph.gradle
gradle/dependency-graph/: project.dot
gradle/wrapper/: gradle-wrapper.properties
hooks/: checkstyleplugin.sh  google_checks.xml  pre-push
kommunicate/: .gitignore  build.gradle
kommunicate/src/main/: AndroidManifest.xml
kommunicate/src/main/c/: CMakeLists.txt  anti_hooking.cpp  frida_detection.cpp  memory_check.cpp  root_detection.cpp
kommunicate/src/main/java/annotations/: CleanUpRequired.kt
kommunicateui/: .gitignore  build.gradle  proguard-rules.txt
kommunicateui/src/main/: AndroidManifest.xml
migration/: Migrate to 2.5.0.md  Migrate to 2.6.6.md  Migrate to 2.7.0.md  Migrate to 2.X.X.md
mobicomkitui/: build.gradle  proguard-rules.pro
(+2158 files in other folders)
